Fixed workflow to overwrite binary v2

--- a/.gitea/workflows/deploy-term-squire-nginx.yaml
+++ b/.gitea/workflows/deploy-term-squire-nginx.yaml
@@ -36,10 +36,11 @@ jobs:
             echo "Downloading the latest binary from ${binary_url}"
 
             # Download the latest binary and copy it into the term-squire directory
-            wget ${binary_url} -O term-squire/term-squire
+            cd /media/1000gb/dockerfiles/term-squire-nginx/term-squire
+            wget ${binary_url} -O term-squire
 
             # Make the binary executable
-            chmod +x term-squire/term-squire
+            chmod +x term-squire
 
             # Copy the binary to the target directory
             #cp term-squire /media/1000gb/dockerfiles/term-squire-nginx/term-squire/
