crates updated to newest versions

--- a/.gitea/workflows/deploy-term-squire-nginx.yaml
+++ b/.gitea/workflows/deploy-term-squire-nginx.yaml
@@ -36,15 +36,10 @@ jobs:
             echo "Downloading the latest binary from ${binary_url}"
 
             # Download the latest binary and copy it into the term-squire directory
-            cd /media/1000gb/dockerfiles/term-squire-nginx/term-squire
-            rm term-squire
-            wget ${binary_url} -O term-squire
+            wget ${binary_url} -O term-squire/term-squire
 
             # Make the binary executable
-            chmod +x term-squire
-
-            # Copy the binary to the target directory
-            #cp term-squire /media/1000gb/dockerfiles/term-squire-nginx/term-squire/
+            chmod +x term-squire/term-squire
 
             # Run docker-compose up to restart the containers
             docker-compose up -d
