--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "term-squire"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -16,11 +16,12 @@ filters = "0.4.0"
 futures = "0.3.31"
 lazy_static = "1.5.0"
 rust-fuzzy-search = "0.1.1"
-rusqlite = { version = "0.36.0", features = ["bundled"] }
+rusqlite = { version = "0.37.0", features = ["bundled"] }
 serde = { version = "1.0.215", features = ["derive"] }
 serde_derive = "1.0.215"
 serde_json = "1.0.133"
-tokio = { version = "1.42.0", features = ["full"] }
+tempfile = "3.20.0"
+tokio = { version = "1.46.0", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 xml2json-rs = "1.0.1"
