--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow ="1.0.98"
 askama = "0.14.0"
 axum = { version = "0.8.4", features = ["macros","multipart"] }
 chrono = "0.4.38"
