--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "term-squire"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,6 +11,7 @@ askama = "0.14.0"
 axum = { version = "0.8.4", features = ["macros","multipart"] }
 chrono = "0.4.38"
 clap = { version = "4.5.22", features = ["derive"] }
+color-eyre = "0.6.3"
 display_derive = "0.0.0"
 elementtree = "1.2.3"
 filters = "0.4.0"
@@ -23,8 +24,8 @@ serde_derive = "1.0.215"
 serde_json = "1.0.133"
 tempfile = "3.20.0"
 tokio = { version = "1.46.0", features = ["full"] }
-tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+tracing = { version = "0.1.41", features = ["attributes"]}
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 xml2json-rs = "1.0.1"
 
 [lib]
